@@ -2607,6 +2607,10 @@ name|coreDescriptor
 argument_list|,
 name|updateHandler
 argument_list|,
+name|this
+operator|.
+name|solrDelPolicy
+argument_list|,
 name|prev
 argument_list|)
 decl_stmt|;
@@ -3818,6 +3822,8 @@ argument_list|,
 literal|null
 argument_list|,
 literal|null
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
@@ -3953,6 +3959,9 @@ name|cd
 parameter_list|,
 name|UpdateHandler
 name|updateHandler
+parameter_list|,
+name|IndexDeletionPolicyWrapper
+name|delPolicy
 parameter_list|,
 name|SolrCore
 name|prev
@@ -4319,13 +4328,22 @@ argument_list|()
 expr_stmt|;
 if|if
 condition|(
-name|updateHandler
+name|delPolicy
 operator|==
 literal|null
 condition|)
 block|{
 name|initDeletionPolicy
 argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|solrDelPolicy
+operator|=
+name|delPolicy
 expr_stmt|;
 block|}
 name|this
